--- a/index.html
+++ b/index.html
@@ -1,42 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>first projects</title>
     <link rel="stylesheet" href="styling/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <header class="header">
-         <section class="banner-section">
-           
+        <section class="banner-section">
+
             <div class="banner-description">
                 <h2 class="banner-title">All Thinks Are Possible If You believe</h2>
-                <p class="banner-blogs">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="banner-blogs">There are many variations of passages of Lorem Ipsum available, but the majority
+                    have suffered alteration in some form, by injected humour, or randomised words</p>
                 <button class="btn-style">Contact</button>
             </div>
-         </section>
+        </section>
         </div>
-        </header>
+    </header>
     <main>
         <section class="motivation-part">
-           <div class="person-img">
-            <img src="images/person.png" alt=""> 
-           </div>
-           <div class="motivation">
-            <h3 class="title">My failures of previous year</h3>
-            <p class="sub-title">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
-            <ul class="some-motivation-point">
-                <li>Contrary to popular belief, is not simply.</li>
-                <li>Contrary to popular belief.</li>
-                <li>Contrary to popular , is not simply.</li>
-                <li>Contrary to popular belief, is not simply.</li>
-                <li>Contrary to popular simply.</li>
-            </ul>
-           </div>
+            <div class="person-img">
+                <img src="images/person.png" alt="">
+            </div>
+            <div class="motivation">
+                <h3 class="title">My failures of previous year</h3>
+                <p class="sub-title">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in
+                    a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.
+                </p>
+                <ul class="some-motivation-point">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+            </div>
         </section>
+        <section class="plan">
+            <h1>My Plans</h1>
+            <section class="skills-section">
+                <div class="skill">
+                    <img src="images/icons/web.png" alt="" class="icon-web cmi">
+                    <h2 class="web skill-title">Web Development</h2>
+                    <h4 class="i-will-do">I want to start</h4>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="" class="icon-js cmi">
+                    <h2 class="js skill-title">Javascript</h2>
+                    <h4 class="i-will-do">I want to learn</h4>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/smoke.png" alt="" class="icon-smoke cmi">
+                    <h2 class="smoking-habbit skill-title">Smoking Habbit</h2>
+                    <h4 class="i-will-do">I want to end</h4>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/ecom.png" alt="" class="icon-em cmi">
+                    <h2 class="e-commerce skill-title">ecommerce</h2>
+                    <h4 class="i-will-do">I want to develop</h4>
+                </div>
+    
+            </section>
+    </section>
     </main>
 </body>
+
 </html>
