--- a/index.html
+++ b/index.html
@@ -70,7 +70,43 @@
     
             </section>
     </section>
-    </main>
-</body>
+    <!-- contact section -->
+     <div class="contact-section">
+        <h3 class="be-positive">Always keep a positive mindset</h3>
+        <button class="contact-btn">Call now</button>
+     </div>
 
+    
+    </main>
+    <footer>
+        <section class="footer-section">
+            <div>
+                <div>
+                <h2 class="footer-Title">Future</h3>
+                <div class="footer-color">
+                <p class="footer-blogs">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <div class="info-mail-phone">
+                <h3 class="info-mail">Email : info@gmail.com</h3>
+                <h3 class="info-phone">Phone : +8801679-860388</h3>
+                </div>
+                </div>
+                </div>
+                <div class="fb-twiter-youtube">
+                   <div>
+                    <img src="images/icons/fb.png" alt="">
+                   </div>
+                   <div><img src="images/icons/twitter.png" alt=""></div>
+                   <div><img src="images/icons/youtube.png" alt=""></div>
+                </div>
+            </div>
+            <div class="form">
+                <h3 class="form-title">Subscribe</h3>
+                <form action="">
+                    <input   class="email-adj " type="email" name="email" id="" placeholder="Enter your email">
+                </form>
+                <button class="btn-subscribe">Subscribe</button>
+            </div>
+        </section>
+    </footer>
+</body>
 </html>
