--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
 
     
     </main>
-    <footer>
+    <footer class="footer-head">
         <section class="footer-section">
-            <div>
+            <div class="footer-section-info">
                 <div>
                 <h2 class="footer-Title">Future</h3>
                 <div class="footer-color">
