icon space added

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
                 </div>
                 <div class="fb-twiter-youtube">
                    <div>
-                    <img src="images/icons/fb.png" alt="">
+                    <img class="fb icon" src="images/icons/fb.png" alt="">
                    </div>
-                   <div><img src="images/icons/twitter.png" alt=""></div>
-                   <div><img src="images/icons/youtube.png" alt=""></div>
+                   <div><img class="twitter icon" src="images/icons/twitter.png" alt=""></div>
+                   <div><img class="youtube icon" src="images/icons/youtube.png" alt=""></div>
                 </div>
             </div>
             <div class="form">
